--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,5 @@
 @import "global.css";
 @import "tastes.css";
 @import "ingredients.css"; 
-@import "about-us.css";
+@import "blog.css";
 @import "header.css";
-
-
