fixed names of some variables

--- a/css/global.css
+++ b/css/global.css
@@ -28,8 +28,8 @@
     --menu-subtitle-color: #ececf2;
     --menu-text-color: #c3c4cE;
     --contacts-background-color: #f8b83d;
-    --cotact-us-main-color: #ffc452;
-    --contact-us-text-color: #fff;
+    --cotacts-main-color: #ffc452;
+    --contacts-text-color: #fff;
 }
 
 img {
