--- a/css/ingredients.css
+++ b/css/ingredients.css
@@ -1,4 +1,4 @@
-.ingredients{
+.ingredients__items{
     display: flex;
     flex-direction: column;
     background-color: var(--main-page-background-color);
@@ -7,8 +7,20 @@
     
 }
 
+/* .ingredients__ice-cream {
+    width: 80%;
+    height: 80%;
+    border: 3px solid black;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+
+
+} */
+
 .ingredients__image {
     display: block;
+    max-width: 669px;
     margin-left: auto;
     margin-right: auto;
     margin-top: 90px;
@@ -16,7 +28,7 @@
 
 .ingredients__content {
     text-align: left;
-    margin: 20px;
+    margin: 30px 10px 20px 15px;
     color: #fff;
 }
 
@@ -42,6 +54,8 @@
     padding-bottom: 16px;
 }
 
+
+
 .ingredients__text {
     font-family: Source Sans;
     font-size: 1.25rem;
@@ -55,8 +69,19 @@
 
 
 .ingredients__listing {
+    list-style-type: none;
     list-style-image: url(../img/ingredients/listing-image.svg); 
+    
     margin-left: 15px;
+    margin-bottom: 10px;
+    
+}
+
+.ingredients__listing .ingredients__list::marker {
+    
+    font-size: 15px;
+    color: #b87390;;
+
 }
 
 .ingredients__list {
@@ -64,7 +89,8 @@
     font-size: 1.125rem;
     font-weight: 400;
     color: var(--text-color);
-    margin-bottom: 17px;
+    padding-bottom: 15px;
+    
     
 }
 
@@ -76,3 +102,18 @@
     
 }
 
+@media(min-width: 800px) {
+    .ingredients__items {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
+    .ingredients__image {
+        width: 523px;
+        height: 476px;
+    }
+
+    
+    
+}
+    
