--- a/css/header.css
+++ b/css/header.css
@@ -1,6 +1,34 @@
+.header{
+    background: url(../img/header/header-background.png);
+    background-size: cover;
+    background-position: center;
+    padding:1.5rem;
+}
 .main-page__title{
     font-family: 'Dangrek', cursive;
+    font-size: 3.625rem;
+    color: var(--title-color);
+    line-height:4rem;
 }
 .main-page__title span{
     font-family: 'Leckerli One', cursive;
+    font-size: 0.875rem;
+}
+.main-page__sub-title{
+    font-family: "Source Sans 3", sans-serif;
+    font-size:1.25rem;
+    color: var(--subtitle-color);
+}
+.header__nav-image{
+    width:129px;
+}
+.header__nav-left{
+    display:none;
+}
+.header__nav-right{
+    display: none;
+}
+.main-page__our-menu-button{
+    width:9rem;
+    text-align: center;
 }
