--- a/css/blog.css
+++ b/css/blog.css
@@ -66,7 +66,7 @@
     margin-bottom: 35px;
 }
 
-.blog__btn {
+.main-btn {
     background-color: var(--brand-color);
     padding: 15px 30px;
     width: 140px;
@@ -75,15 +75,15 @@
     cursor: pointer;
 }
 
-.blog__btn:hover {
+.main-btn:hover {
     background-color: var(--button-hover);
     transition: 0.2s;
 }
 
-.btn__text {
+.main-btn__text {
     text-decoration: none;
     color: var(--button-text-color);
-    font-family: Source Sans Pro;
+    font-family: "Source Sans Pro";
     font-size: 0.94rem;
 }
 
