--- a/css/global.css
+++ b/css/global.css
@@ -42,3 +42,24 @@ img {
     max-width: 1200px;
     margin: auto;
 }
+
+.main-btn {
+    background-color: var(--brand-color);
+    padding: 15px 30px;
+    width: 140px;
+    height: 50px;
+    border-radius: 27px;
+    cursor: pointer;
+}
+
+.main-btn:hover {
+    background-color: var(--button-hover);
+    transition: 0.2s;
+}
+
+.main-btn__text {
+    text-decoration: none;
+    color: var(--button-text-color);
+    font-family: "Source Sans Pro";
+    font-size: 0.94rem;
+}
