--- a/css/global.css
+++ b/css/global.css
@@ -63,3 +63,31 @@ img {
     font-family: "Source Sans Pro";
     font-size: 0.94rem;
 }
+
+.mask-yellow-button {
+    border-radius: 27px;
+}
+
+.mask-yellow-button__block {
+    width: 160px;
+    height: 50px;
+    background-color: var(--button-additional-color);
+    border-radius: 27px;  
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    text-decoration: none;
+}
+
+.block__text-style {
+    color: var(--button-text-color);
+    font-size: 0.94rem;
+    font-family: "Source Sans Pro";
+}
+
+.mask-yellow-button:hover {
+    background-color: rgba(255,255,255,0.3);
+    opacity: 0.9;
+    transition: 0.2s;
+}
