--- a/css/tastes.css
+++ b/css/tastes.css
@@ -5,23 +5,30 @@
     background-color: var(--main-page-background-color);
 }
 .tastes__text {
+    width: 100%;
     text-align: center;
     color: var(--title-color);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .text__title {
-    font-family: Leckerli One;
-    font-size: 21px;
+    font-family: 'Leckerli One';
+    font-size: 1rem;
 }
 .text__sub-title {
-    font-size: 48px;
+    width: 80%;
+    line-height: 35px;
+    font-size: 2.12rem;
     margin: 10px 0 10px 0;
-    font-weight: bold;
-    font-family: Dangrek;
+    font-family: 'Dangrek', cursive;
 }
 .text__we-have {
+    width: 80%;
+    margin-top: 20px;
     color: var(--subtitle-color);
-    font-size: 20px;
-    font-family: Source Sans ;
+    font-size: 1.25rem;
+    font-family: 'Source Sans 3',sans-serif;
 }
 .tastes__cards {
     margin: 40px 0 50px 0;
@@ -32,8 +39,16 @@
     flex-wrap: wrap;
     
 }
+
+.card-border {
+    width: 270px;
+    height: 365px;
+    display: flex;
+    justify-content: center;
+}
+
 .card__ice-cream {
-    width: 263px;
+    width: 242px;
     height: 365px;
     display: flex;
     flex-direction: column;
@@ -42,36 +57,65 @@
     background-color: #32264b;
     border-radius: 10px;
 }
+
 .ice-cream__img {
     width: 203px;
     height: 157px;
 }
+
 .ice-cream__name {
-    font-family: Dangrek;
-    font-size: 26px;
+    font-family: 'Dangrek', cursive;
+    font-size: 1.5rem;
     color: var(--title-color);
 }
+
 .ice-cream__description {
-    font-family: Source Sans ;
-    font-size: 18px;
+    font-size: 1.1rem;
+    font-family: 'Source Sans 3',sans-serif;
     font-style: italic;
-    color: #a6a6a6;
+    color: var(--tastes-description-color);
 }
+
 .ice-cream__price {
-    font-family: Source Sans ;
-    font-size: 21px;
+    font-size: 1.2rem;
+    font-family: 'Source Sans 3',sans-serif;
     color: var(--text-color);
 }
+
 .price__numbers {
+    font-size: 1.2rem;
+    font-family: 'Source Sans 3',sans-serif;
     color: var(--price-color);
 }
-.button-arrow__button {
-    background: none;
-    border: none;
-    width: 30px;
-    height: 30px;
-    font-size: 40px;
-    color: #a6a6a6;
+
+.carousel-control-next {
+    margin: auto;
+    width: 24px;
+    height: 24px;
+    background-color: var(--tastes-carousel-arrows-color);
+    border-radius: 18px;
+    opacity: 1;
+}
+
+.carousel-control-next-icon {
+    width: 12px;
+    height: 12px;
+    margin-left: 2px;
+}
+
+.carousel-control-prev {
+    margin: auto;
+    width: 24px;
+    height: 24px;
+    background-color: var(--tastes-carousel-arrows-color);
+    border-radius: 18px;
+    opacity: 1;
+}
+
+.carousel-control-prev-icon {
+    width: 12px;
+    height: 12px;
+    margin-right: 2px;
 }
 
 .mask-yellow-button {
@@ -100,6 +144,25 @@
     background-color: rgba(255,255,255,0.3);
     opacity: 0.9;
     transition: 0.5s;
+}
+
+@media(min-width: 768px) {
+    .carousel-control-next {
+        width: 32px;
+        height: 32px;
+    }
+    .carousel-control-next-icon {
+        width: 20px;
+        height: 20px;
+    }
+    .carousel-control-prev {
+        width: 32px;
+        height: 32px;
+    }
+    .carousel-control-prev-icon {
+        width: 20px;
+        height: 20px;
+    }
 }
 
 
