--- a/css/blog.css
+++ b/css/blog.css
@@ -4,7 +4,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    padding: 60px 0 ;
+    padding-top: 60px;
 }
 
 .blog .container {
@@ -53,7 +53,7 @@
 }
 
 .blog__article {
-    max-width: 345px;
+    max-width: 705px;
     margin-bottom: 30px;
 }
 
@@ -77,10 +77,20 @@
     height: 75px;
 }
 
-@media(min-width: 800px) {
+@media(min-width: 750px){
     .blog__acticles-overview {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        grid-column-gap: 30px;
+    }
+}
+
+@media(min-width: 950px) {
+    .blog__acticles-overview {
+        display: flex;
         flex-direction: row;
-        flex-wrap: wrap;
+        column-gap: 30px;
     }
 }
 
