--- a/css/gallery.css
+++ b/css/gallery.css
@@ -1,6 +1,6 @@
 .gallery {
     background-color: var(--main-page-background-color);
-    padding: 60px 0;
+    padding-top: 60px;
 }
 
 .gallery .container {
@@ -37,24 +37,17 @@
 }
 
 .gallery__photos {
-    display: flex;
-    flex-direction: column;
-    row-gap: 14px;
-} 
-
-.gallery__photos__group {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 0.2fr 1fr;
+    grid-template-rows: 1fr 0.2fr 1fr 2fr;
     grid-gap: 14px;
 }
 
 .gallery__photos img {
     border-radius: 6px;
-    max-width: 470px;
 }
 
-.gallery__photos__group :first-child {
+.gallery__photos :first-child {
     grid-area: 1/1/3/2;
     height: 100%;
     width: 100%;
@@ -62,7 +55,7 @@
     object-position: 30% 50%;
 }
 
-.gallery__photos__group :last-child {
+.gallery__photos :nth-child(4) {
     grid-area: 2/2/4/3;
     height: 100%;
     width: 100%;
@@ -70,18 +63,28 @@
     object-position: 45% 50%;
 }
 
-@media (min-width:480px) {
-    .gallery__photos__group {
-        grid-gap: 30px;
-    }
+.gallery__photos :last-child {
+    grid-area: 4/1/5/3;
+    height: 100%;
+    object-fit: cover;
+}
 
+@media (min-width:480px) {
     .gallery__photos {
-        row-gap: 30px;
+        grid-gap: 30px;
     }
 }
 
-@media (min-width:770px) {
+@media (min-width: 800px) {
     .gallery__photos {
-         flex-direction: row;
+        grid-template-columns: 20.3% 20.3% 53%;
+        grid-template-rows: 1fr 0.2fr 1fr;
+    }
+
+    .gallery__photos :last-child {
+        grid-area: 1/3/4/4;
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
     }
 }
