--- a/css/header.css
+++ b/css/header.css
@@ -3,6 +3,11 @@
     background-size: cover;
     background-position: center;
     padding: 1.5rem;
+    padding-top: 1rem;
+}
+
+.main-page{
+    padding-top: 7rem;
 }
 
 .main-page__title {
@@ -22,6 +27,8 @@
     font-size: 1.25rem;
     color: var(--subtitle-color);
     letter-spacing: 0.4px;
+    margin-top: 2rem;
+    margin-bottom: 3rem;
 }
 
 .header__nav-image {
@@ -40,7 +47,8 @@
 header .mask-yellow-button__block {
     height: 3.7rem;
     text-align: center;
-    margin: 10px;
+    margin-top: 20px;
+    margin-bottom: 20px;
     border-radius: 32px;
 }
 
