centering burger menu items

--- a/css/header.css
+++ b/css/header.css
@@ -99,3 +99,6 @@ header .mask-yellow-button__block {
     letter-spacing: 0.495px;
     font-size: 1.03125rem;
 }
+.navbar{
+    text-align:center;
+}
