--- a/css/gallery.css
+++ b/css/gallery.css
@@ -69,6 +69,11 @@
     object-fit: cover;
 }
 
+.wave-brand-color {
+    height: 75px;
+    margin-top: -75px;
+}
+
 @media (min-width:480px) {
     .gallery__photos {
         grid-gap: 30px;
@@ -77,7 +82,7 @@
 
 @media (min-width: 800px) {
     .gallery__photos {
-        grid-template-columns: 20.3% 20.3% 54.1%;
+        grid-template-columns: 20.3% 20.3% 53.1%;
         grid-template-rows: 1fr 0.2fr 1fr;
     }
 
