--- a/css/overview-menu.css
+++ b/css/overview-menu.css
@@ -11,7 +11,7 @@
 	min-width: 272px;
 	min-height: 178px;
 	margin: 0px 25px 50px 25px;
-	background: url(../img/overview-menu-photo/dessert_photo.png) 52.6% 32.25% / cover no-repeat;
+	background: url(img/overview-menu-photo/dessert_photo.png) 52.6% 32.25% / cover no-repeat;
 }
 .overview-desserts {
 	text-align: center;
@@ -46,7 +46,7 @@
 	min-width: 272px;
 	min-height: 178px;
 	margin: 0px 25px 50px 25px;
-	background: url(../img/overview-menu-photo/milk_shakes.png) 50.1% 62.75% / cover no-repeat;
+	background: url(img/overview-menu-photo/milk_shakes.png) 50.1% 62.75% / cover no-repeat;
 }
 .milk-shakes {
 	text-align: center;
@@ -81,7 +81,7 @@
 	min-width: 272px;
 	min-height: 178px;
 	margin: 0px 25px 50px 25px;
-	background: url(../img/overview-menu-photo/ice_cream.png) 58.23% 61.54% / cover no-repeat;
+	background: url(img/overview-menu-photo/ice_cream.png) 58.23% 61.54% / cover no-repeat;
 }
 .ice-cream {
 	text-align: center;
