--- a/css/global.css
+++ b/css/global.css
@@ -26,6 +26,7 @@
     --menu-main-color: #537398;
     --menu-subtitle-color: #ececf2;
     --menu-text-color: #c3c4cE;
+    --menu-price-color: #ffc452;
     --contacts-background-color: #f8b83d;
     --cotacts-main-color: #ffc452;
     --contacts-text-color: #fff;
