--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,7 @@
 @import "header.css";
 @import "tastes.css";
 @import "ingredients.css";
+@import "menu.css";
 @import "gallery.css"; 
 @import "blog.css";
 @import "overview-menu.css";
