Update tab style, remake border

--- a/css/global.css
+++ b/css/global.css
@@ -27,6 +27,9 @@
     --menu-subtitle-color: #ececf2;
     --menu-text-color: #c3c4cE;
     --menu-price-color: #ffc452;
+    --menu-border-color: #605473;
+    --menu-tab-border-active-color: #b87390;
+    --menu-tab-text-color: #b6b1bf;
     --contacts-background-color: #f8b83d;
     --cotacts-main-color: #ffc452;
     --contacts-text-color: #fff;
