edit name color button mask tastes

--- a/css/global.css
+++ b/css/global.css
@@ -104,7 +104,7 @@ a {
 }
 
 .mask-additional-button:hover {
-    background-color: var(--mask-color);
+    background-color: var(--button-mask-color);
     opacity: 0.9;
     transition: 0.2s;
 }
