--- a/css/global.css
+++ b/css/global.css
@@ -108,3 +108,28 @@ a {
     opacity: 0.9;
     transition: 0.2s;
 }
+
+.text {
+    width: 100%;
+    text-align: center;
+    color: var(--title-color);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.text>.text__sub-title {
+    width: 80%;
+    line-height: 35px;
+    font-size: 2.12rem;
+    margin: 10px 0 10px 0;
+    font-family: 'Dangrek', cursive;
+}
+
+.text>.text__text {
+    width: 80%;
+    margin-top: 20px;
+    color: var(--subtitle-color);
+    font-size: 1.25rem;
+    font-family: 'Source Sans 3', sans-serif;
+}
