fixing css footer

--- a/css/footer.css
+++ b/css/footer.css
@@ -21,7 +21,7 @@
 	display: flex;
 	justify-content: center;
 }
-.welcome__text{
+.welcome__text {
 	text-align: center;
 	padding-top: 30px;
 	padding-bottom: 20px;
@@ -105,7 +105,7 @@
 	color: var(--title-color);
 	text-align: center;
 	padding-top: 20px;
-	padding-bottom: 2 0px;
+	padding-bottom: 20px;
 }
 .footer__schedule-booking .text__sub-title {
 	color: var(--button-additional-color);
