fix id ingredients problem, create about-header.css

--- a/css/global.css
+++ b/css/global.css
@@ -37,6 +37,7 @@
     --tastes-carousel-arrows-color: #000;
     --button-secondary-hover-bg-color: #eab754;
     --button-mask-color: rgba(255, 255, 255, 0.3);
+    --about-page-header-bg-color: #A45276;
 }
 
 img {
