--- a/css/footer.css
+++ b/css/footer.css
@@ -112,3 +112,20 @@
 	font-size: 22px;
 	text-align: center;
 }
+
+  @media(min-width: 750px){
+.grid-container {
+	display: grid;
+	grid-template-columns: repeat(4, 1fr);
+	grid-gap: 20px;
+	margin: 0 auto;
+	justify-content: center;
+	align-items: center;
+  }
+  .grid-item {
+	
+	padding: 20px;
+	text-align: center;
+  }
+}
+ 
