--- a/css/footer.css
+++ b/css/footer.css
@@ -117,13 +117,28 @@
 	.grid-container {
 		display: grid;
 		grid-template-columns: repeat(4, 1fr);
-		grid-gap: 20px;
+		grid-gap: 5px;
 		margin: 0 auto;
 		justify-content: center;
 		align-items: center;
 	}
 	.grid-item {
-		padding: 20px;
 		text-align: center;
 	}
+}
+@media (min-width: 750px) {	
+	.footer__footer_text {
+		float: right;
+	}
+
+	.footer__footer_text-two {
+		float: left;
+	}
+}
+
+@media (min-width: 1100px) {
+	.grid-container {
+		width: 1100px;
+	}
+	
 }
