--- a/css/about-us.css
+++ b/css/about-us.css
@@ -49,9 +49,33 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    vertical-align: baseline;
 }    
 
+.cards__title {
+    text-align: center;
+    font-size: 2.125rem;
+    margin: 10px 0 10px 0;
+    font-weight: 400;
+    font-family: Dangrek;
+    color: var(--about-us-subtitle-color);
+}
+
+.cards__text {
+    text-align: center;
+    font-family: Source Sans;
+    font-size: 1.25rem;
+    font-weight: 500;
+    color: var(--title-color);
+}
+
 .cards__images {
-    max-width: 100%;
+    width: 100%;
     height: auto;
+    max-width: 40px;
+    min-width: 26px;
+    max-height: 40px;
+    min-height: 26px;
+    line-height: 28.8px;
+    vertical-align: baseline;
 }
