--- a/css/about-us.css
+++ b/css/about-us.css
@@ -9,13 +9,13 @@
 
 .about-us__text {
     text-align: center;
-    font-family: Source Sans;
+    font-family: Source Sans, sans-serif;
     font-size: 1.25rem;
     font-weight: 500;
     letter-spacing: 0.4px;
-    /* line-height: 14px; */
     color: var(--about-us-texr-color);
     padding-bottom: 23px;
+    line-height: 30px;
 }
 
 .about-us__title {
@@ -31,14 +31,15 @@
 
 .about-us__subtitle {
     text-align: center;
-    font-size: 2.125rem;
-    margin: 10px 0 10px 0;
-    font-weight: 400;
-    font-family: Dangrek;
     color: var(--about-us-subtitle-color);
+    font-family: Dangrek, cursive;
+    font-size: 2.13rem;
+    line-height: 37px;
+    margin-bottom: 25px;
 }
 
 .about-us__main-text {
+    text-align: center;
     font-family: Source Sans;
     font-size: 1.125rem;
     font-weight: 400;
@@ -63,10 +64,13 @@
 
 .cards__text {
     text-align: center;
-    font-family: Source Sans;
+    font-family: Source Sans, sans-serif;
+    letter-spacing: 0.4px;
     font-size: 1.25rem;
     font-weight: 500;
     color: var(--title-color);
+    padding-bottom: 23px;
+    line-height: 30px;
 }
 
 .cards__images {
