--- a/css/navbar.css
+++ b/css/navbar.css
@@ -45,6 +45,14 @@
 .navbar {
     text-align: center;
 }
+
 .header__nav-image {
     width: 129px;
+}
+
+@media (max-width:991px) {
+    .header .navbar-collapse {
+        height: 100vh;
+        transition-duration: 0s;
+    }
 }
