--- a/css/staff.css
+++ b/css/staff.css
@@ -8,7 +8,6 @@
 }
 
 .staff .text {
-    text-align: left;
     align-items: baseline;
 }
 
@@ -24,6 +23,7 @@
 .staff .text__text {
     margin: 0 0 25px;
     font-weight: 500;
+    text-align: left;
 }
 
 .staff__text {
@@ -43,8 +43,9 @@
     background-color: var(--brand-color)
 }
 
-.staff__carousel__workers > img {
+.workers img {
     border-radius: 6px 6px 0 0;
+    max-height: 540px;
 }
 
 .workers__name {
@@ -58,4 +59,57 @@
     font-weight: 500;
     border-radius: 0 0 6px 6px;
     padding: 15px 0;
+}
+
+.arrow-btn-next,
+.arrow-btn-prev {
+    width: 40px;
+    height: 40px;
+    background-color: var(--about-us-main-color);
+    border-radius: 50%;
+    padding: 5px 5px 5px 3px;
+    align-items: center;
+}
+
+.arrow-btn-next {
+    padding: 5px 0px 5px 7px;
+}
+
+.arrow-btn-next>img {
+    max-width: 30px;
+}
+
+.arrow-btn-prev>img {
+    max-width: 30px;
+    transform: rotate(180deg);
+}
+
+.staff__carousel {
+    display: grid;
+    grid-template-columns: 40px 1fr 40px;
+    align-items: center;
+}
+
+@media(min-width: 1000px) {
+    .staff .container {
+        display: flex;
+    }
+
+    .staff__text-block {
+        width: 25%;
+    }
+
+    .staff__carousel {
+        width: 75%;
+    }
+
+    .workers {
+        display: flex;
+        gap: 15px;
+        justify-content: space-around;
+    }
+
+    .worker {
+        width: 50%;
+    }
 }
