--- a/css/tastes.css
+++ b/css/tastes.css
@@ -4,6 +4,7 @@
     align-items: center;
     background-color: var(--main-page-background-color);
 }
+
 .tastes__text {
     width: 100%;
     text-align: center;
@@ -12,10 +13,12 @@
     flex-direction: column;
     align-items: center;
 }
+
 .text__title {
     font-family: 'Leckerli One';
     font-size: 1rem;
 }
+
 .text__sub-title {
     width: 80%;
     line-height: 35px;
@@ -23,42 +26,63 @@
     margin: 10px 0 10px 0;
     font-family: 'Dangrek', cursive;
 }
+
 .text__we-have {
     width: 80%;
     margin-top: 20px;
     color: var(--subtitle-color);
     font-size: 1.25rem;
-    font-family: 'Source Sans 3',sans-serif;
+    font-family: 'Source Sans 3', sans-serif;
 }
+
 .tastes__cards {
+    max-width: 1200px;
     margin: 40px 0 50px 0;
     width: 100%;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
-    flex-wrap: wrap;
-    
 }
 
-.card-border {
-    width: 270px;
-    height: 365px;
+.cards__carousel {
+    width: 90%;
+    margin: 0;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+    max-width: 1100px;
+}
+
+.cards__prev-slide {
+    width: 24px;
+    height: 24px;
+    color: white;
+    background-color: var(--tastes-carousel-arrows-color);
+    border: none;
+    border-radius: 18px;
+}
+
+.cards__next-slide {
+    width: 24px;
+    height: 24px;
+    border: none;
+    color: white;
+    background-color: var(--tastes-carousel-arrows-color);
+    border-radius: 18px;
 }
 
 .card__ice-cream {
-    width: 242px;
+    width: 250px;
     height: 365px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-between;
     background-color: #32264b;
     border-radius: 10px;
 }
 
 .ice-cream__img {
+    margin-top: 28px;
     width: 203px;
     height: 157px;
 }
@@ -71,56 +95,23 @@
 
 .ice-cream__description {
     font-size: 1.1rem;
-    font-family: 'Source Sans 3',sans-serif;
+    font-family: 'Source Sans 3', sans-serif;
     font-style: italic;
     color: var(--tastes-description-color);
 }
 
 .ice-cream__price {
     font-size: 1.2rem;
-    font-family: 'Source Sans 3',sans-serif;
+    font-family: 'Source Sans 3', sans-serif;
     color: var(--text-color);
 }
 
 .price__numbers {
     font-size: 1.2rem;
-    font-family: 'Source Sans 3',sans-serif;
+    font-family: 'Source Sans 3', sans-serif;
     color: var(--price-color);
 }
 
-.slide {
-    max-width: 270px;
-}
-
-.carousel-control-next {
-    margin: auto;
-    width: 24px;
-    height: 24px;
-    background-color: var(--tastes-carousel-arrows-color);
-    border-radius: 18px;
-    opacity: 1;
-}
-
-.carousel-control-next-icon {
-    width: 12px;
-    height: 12px;
-    margin-left: 2px;
-}
-
-.carousel-control-prev {
-    margin: auto;
-    width: 24px;
-    height: 24px;
-    background-color: var(--tastes-carousel-arrows-color);
-    border-radius: 18px;
-    opacity: 1;
-}
-
-.carousel-control-prev-icon {
-    width: 12px;
-    height: 12px;
-    margin-right: 2px;
-}
 
 .mask-additional-button {
     border-radius: 27px;
@@ -130,7 +121,7 @@
     width: 160px;
     height: 50px;
     background-color: var(--button-additional-color);
-    border-radius: 27px;  
+    border-radius: 27px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -150,24 +141,53 @@
     transition: 0.5s;
 }
 
-@media(min-width: 768px) {
+@media (min-width: 768px) {
     .carousel-control-next {
         width: 32px;
         height: 32px;
     }
+
     .carousel-control-next-icon {
         width: 20px;
         height: 20px;
     }
+
     .carousel-control-prev {
         width: 32px;
         height: 32px;
     }
+
     .carousel-control-prev-icon {
         width: 20px;
         height: 20px;
     }
 }
+
+@media (max-width: 610px) {
+    .cards__carousel {
+        width: 250px;
+        margin: 0;
+    }
+}
+
+@media (min-width: 611px) {
+    .cards__carousel {
+        max-width: 550px;
+    }
+}
+
+@media (min-width: 881px) {
+    .cards__carousel {
+        max-width: 850px;
+    }
+}
+
+@media (min-width: 1180px) {
+    .cards__carousel {
+        max-width: 1200px;
+    }
+}
+
 
 
 
