add wave container

--- a/css/about-us.css
+++ b/css/about-us.css
@@ -8,6 +8,10 @@
     padding-top: 60px;
 }
 
+.wave-container-about-us {
+    width: 100%;
+}
+
 .wave_brand_color {
     height: 75px;
     margin-top: -110px;
