--- a/css/about-us.css
+++ b/css/about-us.css
@@ -115,3 +115,20 @@
     align-items: center;
 }
 
+@media(min-width: 750px) {
+    .about-us__cards {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        grid-column-gap: 30px;
+    }
+}
+
+@media(min-width: 950px) {
+    .about-us__cards {
+        display: flex;
+        flex-direction: row;
+        column-gap: 32px;
+    }
+}
+
