--- a/css/about-us.css
+++ b/css/about-us.css
@@ -116,16 +116,16 @@
     align-items: center;
 }
 
-@media(min-width: 750px) {
+@media(max-width: 750px) {
     .about-us {
         display: grid;
-        grid-template-columns: repeat(4, 1fr);
+        grid-template-columns: 1fr;
         justify-content: center;
 		align-items: center;
     }
 }
 
-@media(min-width: 950px) {
+@media(min-width: 751px) {
     .about-us {
         display: flex;
         flex-direction: column;
