Apply Prettier 2.8.0 to all files

--- a/css/menu-header.css
+++ b/css/menu-header.css
@@ -1,8 +1,8 @@
 .header {
-    background: var(--menu-main-color);
+  background: var(--menu-main-color);
 }
 
 .text__main-title {
-    font-family: 'Dangrek', cursive;
-    font-size: 34px;
+  font-family: "Dangrek", cursive;
+  font-size: 34px;
 }
