--- a/css/menu-sections.css
+++ b/css/menu-sections.css
@@ -1,84 +1,84 @@
 .ice-cream,
 .desserts,
 .drinks {
-    background-color: var(--menu-background-color);
-    padding: 60px 0px;
+  background-color: var(--menu-background-color);
+  padding: 60px 0px;
 }
 
 .products {
-    margin-top: 50px;
+  margin-top: 50px;
 }
 
 .product {
-    display: flex;
-    align-content: center;
+  display: flex;
+  align-content: center;
 }
 
 .product:nth-child(4) {
-    margin-bottom: 50px;
+  margin-bottom: 50px;
 }
 
 .product__image-container {
-    width: 70px;
-    height: 70px;
-    border-radius: 50%;
-    background-color: #537398;
-    margin: 10px;
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  background-color: #537398;
+  margin: 10px;
 }
 
 .product__image-container .product__product-img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-    padding: 8px;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  padding: 8px;
 }
 
 .product .product__text {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 .product__product-name-price {
-    display: flex;
-    justify-content: space-between;
-    align-content: center;
-    font-size: 22px;
-    font-family: 'Dangrek', cursive;
-    margin: 0;
+  display: flex;
+  justify-content: space-between;
+  align-content: center;
+  font-size: 22px;
+  font-family: "Dangrek", cursive;
+  margin: 0;
 }
 
 .product-name {
-    position: relative;
-    width: 100%;
-    overflow: hidden;
+  position: relative;
+  width: 100%;
+  overflow: hidden;
 }
 
 .product-name::after {
-    content: '';
-    position: absolute;
-    bottom: 10px;
-    width: 100%;
-    height: 1px;
-    margin-left: 3px;
-    background: white;
+  content: "";
+  position: absolute;
+  bottom: 10px;
+  width: 100%;
+  height: 1px;
+  margin-left: 3px;
+  background: white;
 }
 
 .product-price {
-    margin-left: 3px;
+  margin-left: 3px;
 }
 
 .product__product-desc {
-    color: #c3c4ce;
-    font-style: italic;
+  color: #c3c4ce;
+  font-style: italic;
 }
 
 @media (min-width: 768px) {
-    .products__product .col {
-        flex: 0 0 50%;
-    }
+  .products__product .col {
+    flex: 0 0 50%;
+  }
 
-    .product:nth-child(4) {
-        margin-bottom: 0;
-    }
+  .product:nth-child(4) {
+    margin-bottom: 0;
+  }
 }
