--- a/css/menu.css
+++ b/css/menu.css
@@ -1,91 +1,88 @@
 .menu {
-    background-color: var(--main-page-background-color);
+  background-color: var(--main-page-background-color);
 }
 
 .cards__card {
-    background-color: var(--brand-color);
-    position: relative;
-    width: 100%;
+  background-color: var(--brand-color);
+  position: relative;
+  width: 100%;
 }
 
 .cards__card::after {
-    content: "";
-    display: block;
-    padding-bottom: 100%;
+  content: "";
+  display: block;
+  padding-bottom: 100%;
 }
 
 .cards__card .card-text {
-    color: #fff;
-    font-family: 'Dangrek', cursive;
-    font-weight: 400;
-    position: absolute;
-    bottom: 0;
-    margin-bottom: 20px;
+  color: #fff;
+  font-family: "Dangrek", cursive;
+  font-weight: 400;
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 20px;
 }
 
 .cards__card .card-img {
-    position: absolute;
-    padding-top: 20px;
-    padding-bottom: 70px;
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
+  position: absolute;
+  padding-top: 20px;
+  padding-bottom: 70px;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
 
 .price {
-    color: var(--menu-price-color);
+  color: var(--menu-price-color);
 }
 
-
-.grid__desserts>*,
-.grid__drinks>*,
-.grid__ice-creams>* {
-    padding: 10px 15px;
+.grid__desserts > *,
+.grid__drinks > *,
+.grid__ice-creams > * {
+  padding: 10px 15px;
 }
 
 .menu__tab {
-    border-bottom: 1px solid var(--menu-border-color);
-    flex-wrap: nowrap;
-    overflow-y: hidden;
+  border-bottom: 1px solid var(--menu-border-color);
+  flex-wrap: nowrap;
+  overflow-y: hidden;
 }
 
 .menu__tab .nav-item {
-    flex: 0 0 auto;
+  flex: 0 0 auto;
 }
 
 .menu__tab .nav-item .nav-link {
-    color: var(--menu-tab-text-color);
+  color: var(--menu-tab-text-color);
 }
 
 .menu__tab .nav-item .nav-link:hover {
-    border-color: transparent;
+  border-color: transparent;
 }
 
 .menu__tab .nav-item .nav-link.active {
-    background-color: transparent;
-    border-color: transparent;
-    color: #fff;
-    border-bottom: 3px solid var(--menu-tab-border-active-color);
+  background-color: transparent;
+  border-color: transparent;
+  color: #fff;
+  border-bottom: 3px solid var(--menu-tab-border-active-color);
 }
 
-
 @media (min-width: 768px) {
-    .menu__tab {
-        justify-content: center;
-    }
+  .menu__tab {
+    justify-content: center;
+  }
 
-    .menu__tab-content>.tab-pane>.grid__desserts>*,
-    .menu__tab-content>.tab-pane>.grid__ice-creams>*,
-    .menu__tab-content>.tab-pane>.grid__drinks>* {
-        flex: 0 0 50%;
-    }
+  .menu__tab-content > .tab-pane > .grid__desserts > *,
+  .menu__tab-content > .tab-pane > .grid__ice-creams > *,
+  .menu__tab-content > .tab-pane > .grid__drinks > * {
+    flex: 0 0 50%;
+  }
 }
 
 @media (min-width: 992px) {
-
-    .menu__tab-content>.tab-pane>.grid__desserts>*,
-    .menu__tab-content>.tab-pane>.grid__ice-creams>*,
-    .menu__tab-content>.tab-pane>.grid__drinks>* {
-        flex: 0 0 25%;
-    }
+  .menu__tab-content > .tab-pane > .grid__desserts > *,
+  .menu__tab-content > .tab-pane > .grid__ice-creams > *,
+  .menu__tab-content > .tab-pane > .grid__drinks > * {
+    flex: 0 0 25%;
+  }
 }
