--- a/css/ingredients.css
+++ b/css/ingredients.css
@@ -1,9 +1,13 @@
+.ingredients {
+  background-color: var(--main-page-background-color);
+  background-size: cover;
+}
+
 .ingredients__items {
   display: flex;
   flex-direction: column;
-  background-color: var(--main-page-background-color);
-  background-size: cover;
   min-width: 320px;
+  max-width: 1200px;
 }
 
 .ingredients__image {
@@ -35,37 +39,30 @@
   font-weight: 400;
   font-family: Dangrek;
   letter-spacing: normal;
-  /* line-height: 14px; */
   padding-bottom: 16px;
 }
 
 .ingredients__text {
-  font-family: Source Sans;
+  font-family: Source Sans 3;
   font-size: 1.25rem;
   font-weight: 500;
   letter-spacing: 0.4px;
-  /* line-height: 14px; */
-
   color: var(--text-color);
   padding-bottom: 23px;
 }
 
 .ingredients__listing {
-  /* list-style-type: none;
-    list-style-image: url(../img/ingredients/listing-image.svg);  */
-
   margin-left: 15px;
   margin-bottom: 10px;
 }
 
 .ingredients__listing .ingredients__list::marker {
-  /* content: url(../img/ingredients/listing-image.svg); */
   font-size: 15px;
   color: #b87390;
 }
 
 .ingredients__list {
-  font-family: Source Sans;
+  font-family: Source Sans, sans-serif;
   font-size: 1.125rem;
   font-weight: 400;
   color: var(--text-color);
@@ -73,7 +70,7 @@
 }
 
 .ingredients__main-text {
-  font-family: Source Sans;
+  font-family: Source Sans, sans-serif;
   font-size: 1.125rem;
   font-weight: 400;
   color: rgb(185, 177, 197);
@@ -81,12 +78,18 @@
 
 @media (min-width: 800px) {
   .ingredients__items {
+    margin: 0 auto;
     display: flex;
     flex-direction: row;
     align-items: center;
+    
   }
   .ingredients__image {
-    width: 523px;
-    height: 476px;
+    max-width: 1500px;
+    max-height: 1000px;
+  }
+
+  .ingredients__content {
+    padding-top: 70px;
   }
 }
