--- a/css/ingredients.css
+++ b/css/ingredients.css
@@ -43,7 +43,7 @@
 }
 
 .ingredients__text {
-  font-family: Source Sans 3;
+  font-family: Source Sans, sans-serif;
   font-size: 1.25rem;
   font-weight: 500;
   letter-spacing: 0.4px;
